Update style for form

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ html{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0,0, 0, 0.3);
+    background-color: rgba(0,0, 0, 0.2);
 }
 .cover h1{
     color: #efefef;
@@ -46,6 +46,24 @@ html{
     font-size: 2rem;
     text-align: justify;
     margin: 2rem;
+}
+
+.form{
+    display: flex;
+    flex-direction: row;
+}
+
+.form .data, .result{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem 4rem;
+    font-size: 2rem;
+}
+.data input{
+    display: flex;
+    flex-direction: column;
 }
 
 
